Fix the horizontal scrollbar issue in Home - Fix SCSS videoC& VideoCarousel.

--- a/frontend/src/components/Carousel/CarouselDynamic/CarouselDynamic.scss
+++ b/frontend/src/components/Carousel/CarouselDynamic/CarouselDynamic.scss
@@ -1,37 +1,7 @@
-.carousel {
-  border: 10px;
-  width: 100dvw;
-  display: flex;
-  margin-bottom: -10%;
-}
 .carousel-photocard-container {
-  display: flex;
-  gap: 10px;
+  margin-left: 3dvw;
+  margin-right: 3dvw;
 }
 
-.photocard-image {
-  width: 100dvw;
-  height: 40%;
-  margin-left: 2%;
-  margin-top: 5%;
-  margin-bottom: 2%;
-}
-
-.photocard {
-  margin-bottom: -5%;
-  width: 100dvw;
-  height: 100%;
-}
-.carousel-root {
-  width: 100dvw;
-  height: 100%;
-}
-
-.photocard-content {
-  width: 100dvw;
-  height: 100%;
-}
-h2.photocard-title {
-  color: var(--color-3);
-  font-size: 3.5dvw;
+@media screen and (min-width: 480px) {
 }
