--- a/frontend/src/components/Carousel/VideoCard/VideoCard.scss
+++ b/frontend/src/components/Carousel/VideoCard/VideoCard.scss
@@ -1,24 +1,3 @@
-.video-container {
-  display: flex;
-  justify-content: flex-start;
-  margin-left: 3dvw;
-  margin-bottom: 3dvh;
-  width: 70dvw;
-  height: 100%;
-  gap: 5%;
-}
-
-.video-carousel {
-  overflow-x: scroll;
-  width: 100dvw;
-  height: 100%;
-  margin-bottom: 1dvh;
-  scrollbar-color: transparent transparent;
-  &::-webkit-scrollbar {
-    display: none;
-  }
-}
-
 .video.video {
   width: 40dvw;
   height: 100%;
@@ -29,15 +8,12 @@
   width: 45dvw;
   border: 4px solid var(--color-2scd-2);
 }
-
 .video-card.hovered video::-webkit-media-controls-overlay-play-button {
   display: initial !important;
 }
-
 .video-card.hovered video {
   cursor: pointer;
 }
-
 .card-title {
   font-size: 1.1em;
   font-family: var(--video-title-font);
@@ -46,7 +22,6 @@
   color: var(--color-2scd-2);
   text-align: center;
 }
-
 .video {
   width: 100dvw;
   height: 100%;
