--- a/frontend/src/components/Carousel/VideoCarousel.scss
+++ b/frontend/src/components/Carousel/VideoCarousel.scss
@@ -12,3 +12,20 @@
   -webkit-background-clip: text; // prise en charge des navigateurs WebKit
   margin-bottom: 4dvh;
 }
+.video-carousel {
+  overflow-x: scroll;
+  margin-bottom: 1dvh;
+  scrollbar-color: transparent transparent;
+  &::-webkit-scrollbar {
+    display: none;
+  }
+}
+.video-container {
+  display: flex;
+  justify-content: flex-start;
+  margin-left: 3dvw;
+  margin-bottom: 3dvh;
+  width: 70dvw;
+  height: 100%;
+  gap: 5%;
+}
