--- a/frontend/src/components/Footer/Footer.scss
+++ b/frontend/src/components/Footer/Footer.scss
@@ -4,7 +4,7 @@
   text-align: center;
   position: relative;
   height: 10dvh;
-  width: 100dvw;
+  width: 100%;
   bottom: 0;
   padding-top: 5dvh;
   color: transparent;
