--- a/frontend/src/pages/Login/SignUp/SignUp.scss
+++ b/frontend/src/pages/Login/SignUp/SignUp.scss
@@ -1,5 +1,5 @@
 .signup-box {
-  height: 200dvh;
+  height: 100%;
 }
 .signup-container {
   display: flex;
@@ -31,8 +31,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 40dvh;
-  padding: 4dvh;
+  width: 100%;
 }
 .signup-field {
   padding: 4dvh 0dvh;
@@ -80,9 +79,17 @@
   padding: 0.7dvh;
   margin-bottom: 5dvh;
 }
-
 form.signup {
   width: 50dvw;
   margin-top: -20%;
   font-size: large;
+}
+.login {
+  color: var(--color-2scd-2);
+}
+.login:hover {
+  color: var(--a-hover);
+}
+.login:active {
+  color: var(--a-active);
 }
